Bug 141342 - DFG SSA shouldn't have SetArgument nodes
Summary: DFG SSA shouldn't have SetArgument nodes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 141332
  Show dependency treegraph
 
Reported: 2015-02-06 15:25 PST by Filip Pizlo
Modified: 2015-02-06 15:38 PST (History)
0 users

See Also:


Attachments
Patch (2.62 KB, patch)
2015-02-06 15:26 PST, Filip Pizlo
mark.lam: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2015-02-06 15:25:12 PST
DFG SSA shouldn't have SetArgument nodes
Comment 1 Filip Pizlo 2015-02-06 15:26:30 PST
Created attachment 246181 [details]
Patch
Comment 2 Mark Lam 2015-02-06 15:28:21 PST
Comment on attachment 246181 [details]
Patch

r=me
Comment 3 Filip Pizlo 2015-02-06 15:38:20 PST
Landed in http://trac.webkit.org/changeset/179767