DFG SSA shouldn't have SetArgument nodes https://bugs.webkit.org/show_bug.cgi?id=141342

Reviewed by Mark Lam.

I was wondering why we kept the SetArgument around for captured
variables. It turns out we did so because we thought we had to, even
though we didn't have to. The node is meaningless in SSA.

* dfg/DFGSSAConversionPhase.cpp:
(JSC::DFG::SSAConversionPhase::run):
* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::compileNode):



Canonical link: https://commits.webkit.org/159375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179767 268f45cc-cd09-0410-ab3c-d52691b4dbfc